--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Overview.
 =========
 
+For more info: http://blog.kowalczyk.info/software/fofou/
+
 Fofou (Forums For You) is a simple forum software inspired by
 Joel On Software forum software (http://discuss.joelonsoftware.com/?joel).
 
