--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,23 @@
 This project grew out of my desire to replace PHP-based FruitShow forum for
-my Sumatra PDF viewer with Google App Engine-based solution, hence all the
-TODO items here are things that I personally want to improve.
+my Sumatra PDF viewer with Google App Engine-based solution.
 
-But it's also your project, by the virtue of being open-source, so feel free
-to add any features that *you* want.
+It works, it can be used for hosting your own forums and I'm using it myself.
+
+Of course, there's always something to improve and below is my whishilist. I'm
+sure you'll have no trouble coming up with your own list of possible
+improvements.
 
 TODO must have:
  - hookup sumatra forums at fofou.org
-TODO less urgent:
- - finish /<forumurl>/email?post_id=<post_id>
+
+TODO nice to have:
  - use ajax google search ui 
  - prevent dups by doing sha1 on post body, remembering it in Post.body_sha1
+ - finish /<forumurl>/email?post_id=<post_id>
  - admin features like blocking users (ip address, cookie, user_id)
    and not adding if a Post with this body_sha1 already exists
- - js to show full url when typing url when creating new forum
-Maybe:
- - 
+
+TODO low priority:
  - more templates and ability to choose a template in /manageforums
  - /rsscombined - all posts for all forums, for forum admins mostly
  - cache generated rss feeds using memcached and invalidate them when
@@ -24,3 +26,4 @@ Maybe:
  - cookie validation
  - alternative forms of integration with a website (iframe? return data
    as json and do most of the rendering using javascript?)
+ - document process of importing posts from fruitshow
