--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,11 @@ Of course, there's always something to improve and below is my whishlist. I'm
 sure you'll have no trouble coming up with your own list of possible
 improvements.
 
-TODO must have: nothing
+TODO must have:
+ - cookies for anonymous users seem te be messed up (or I'm filling out
+   post form based on a wrong cookie). When not logged in, replying
+   to a post fills out user info based on the orignal poster, not the
+   person who's replying
 
 TODO nice to have:
  - comment count should only count non-deleted posts
